tests/neg-custom-args/i13838.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/i13838.scala:8:48 -------------------------------------------------
8 |  def liftF[F[_], A](fa: F[A]): F[Foo[A]] = map(fa)(???)  // error
  |                                                ^^
  |                                              Found:    (fa : F[A])
  |                                              Required: F²[Foo[A²]]
  |
  |                                              where:    A  is a type in method liftF
  |                                                        A² is a type variable
  |                                                        F  is a type in method liftF with bounds <: [_] =>> Any
  |                                                        F² is a type variable with constraint <: [_] =>> Any
  |
  |
  |                                              The following import might make progress towards fixing the problem:
  |
  |                                                import collection.Searching.search
  |

longer explanation available when compiling with `-explain`
